Trying to fix the scrollbar to not appear on mobile devices

--- a/style.css
+++ b/style.css
@@ -381,3 +381,7 @@ h2 {
         -webkit-appearance: none;
     }
   }
+  
+  body{
+    overflow: hidden;
+  }
